--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Proyecto Git 02</title>
-</head>
-<body>
+    </head>
+    <body>
+    <div id="container">
     <h1>Proyecto Git 02</h1>
-</body>
+    <div id="post">
+        <h2>Blog de tecnología</h2>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ad fugit
+        quas reiciendis inventore tempora est sequi sed assumenda. Tempore harum
+        debitis voluptates aperiam dicta vel obcaecati ad nemo ullam!
+        </p>
+    </div>
+    </div>
+    </body>
 </html>
