--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     </head>
     <body>
     <div id="container">
+        <div id="header">
+            Hyperblog
+            <span id="tagline">
+                Tu blog de cabecera</span>
+        </div>
     <h1>Proyecto Git 02</h1>
     <div id="post">
-        <h2>Blog de tecnología</h2>
+        <h2>Blog de tecnología Avanzada</h2>
         <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ad fugit
         quas reiciendis inventore tempora est sequi sed assumenda. Tempore harum
