arreglo de titulo tagline
git status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="header">
             Hyperblog
             <span id="tagline">
-                Tu blog de cabecera</span>
+                Tu blog especial de cabecera</span>
         </div>
     <h1>Proyecto Git 02</h1>
     <div id="post">
