actualizacion de pagina desarrollada por

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         debitis voluptates aperiam dicta vel obcaecati ad nemo ullam!
         </p>
         <p>Dale like, suscribete</p>
+        <p>Aplicación Desarrollada por los tecnólogos de la ficha 2848530-B</p>
     </div>
     </div>
     </body>
